Update cmake for ARM architecture and update gitignore

--- a/wowViewerLib/CMakeLists.txt
+++ b/wowViewerLib/CMakeLists.txt
@@ -98,7 +98,9 @@ if (EMSCRIPTEN)
         set(My_Vectorize_Compile_Options "${My_Vectorize_Compile_Options};-msimd128;-msse2;-msse;-ftree-vectorize")
     endif()
 else()
-    set(My_Vectorize_Compile_Options "${My_Vectorize_Compile_Options};-msse3;-mavx2;-ftree-vectorize")
+    if(NOT CMAKE_SYSTEM_PROCESSOR MATCHES "arm|aarch64")
+        set(My_Vectorize_Compile_Options "${My_Vectorize_Compile_Options};-msse3;-mavx2;-ftree-vectorize")
+    endif()
 
     if (NOT MSVC)
         set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Wno-multichar")
