Update cmake for fixing weird missing cstdint for modern compilers?

--- a/wowViewerLib/CMakeLists.txt
+++ b/wowViewerLib/CMakeLists.txt
@@ -11,7 +11,7 @@ set(LINK_OGL3 1)
 set(LINK_OGL4 0)
 set(LINK_EGL 1 PARENT_SCOPE)
 set(LINK_EGL 1)
-option(LINK_VULKAN "Enable Vulkan" ON)
+option(LINK_VULKAN "Enable Vulkan" OFF)
 set(LINK_OPENMP 0)
 set(ENABLE_SIMD 1)
 option(EMSCRIPTEN_SIMD "Enable SIMD for Emscripten " OFF)
